// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` build platform 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      "--platform=linux/arm64",
      ".",
    ],
  ],
]
`;

exports[` build platforms 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--output=type=registry",
      "--platform=linux/arm64",
      "--platform=linux/amd64",
      ".",
    ],
  ],
]
`;

exports[` build retries 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
]
`;

exports[` build throws 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
]
`;

exports[` build uses cache (dry-run) 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      "--build-arg=IMAGE=slim",
      "--cache-from=renovate/docker-build-cache:base-latest",
      "--cache-from=renovate/docker-build-cache:base-dummy",
      ".",
    ],
  ],
]
`;

exports[` build uses cache 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      "--cache-from=renovate/docker-build-cache:base-latest",
      "--cache-to=type=registry,ref=renovate/docker-build-cache:base-latest,mode=max",
      ".",
    ],
  ],
]
`;

exports[` build works 1`] = `
Array [
  Array [
    "docker",
    Array [
      "buildx",
      "build",
      "--tag=renovate/base:latest",
      "--load",
      ".",
    ],
  ],
]
`;

exports[` publish uptodate 1`] = `
Array [
  Array [
    "docker",
    Array [
      "inspect",
      "--format='{{.Id}}'",
      "renovate/base:latest",
    ],
  ],
]
`;

exports[` publish works (dry-run) 1`] = `
Array [
  Array [
    "docker",
    Array [
      "inspect",
      "--format='{{.Id}}'",
      "renovate/base:latest",
    ],
  ],
]
`;

exports[` publish works 1`] = `
Array [
  Array [
    "docker",
    Array [
      "inspect",
      "--format='{{.Id}}'",
      "renovate/base:latest",
    ],
  ],
  Array [
    "docker",
    Array [
      "push",
      "renovate/base:latest",
    ],
  ],
]
`;
